--- a/Web/Web.config
+++ b/Web/Web.config
@@ -13,15 +13,11 @@
 			<section name="settings" type="DevExpress.Web.ASPxClasses.SettingsConfigurationSection, DevExpress.Web.v12.1, Version=12.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
 			<section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v12.1, Version=12.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
 		</sectionGroup>-->
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
   </configSections>
   <connectionStrings>
     <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
     <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
-    <add name="ora8" connectionString="User ID=cust_tran;pwd=ok;Data Source=192.168.118.77/ORCL;Persist Security Info=False;" providerName="System.Data.OracleClient" />
-    <add name="ora8Cargo" connectionString="User ID=tccargo;pwd=ok;Data Source=192.168.101.25/ntcgorcl;Persist Security Info=False;" providerName="System.Data.OracleClient" />
+    <add name="sqlStr" connectionString="server=.;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <common>
     <logging>
@@ -38,11 +34,11 @@
     <add key="WebApiAssembly" value="TCEPORT.TC.Business" />
     <add key="RootModuleID" value="355" />
     <add key="UIModuleLevel" value="2" />
-    <add key="ConnectionType" value="ORA" />
-    <add key="DefaultConnection" value="ora8" />
+    <add key="ConnectionType" value="MSSQL" />
+    <add key="DefaultConnection" value="sqlStr" />
     <add key="WSUrl" value="http://www.tceport.com.cn:8001/login.aspx?BackURL=" />
-    <add key="first" value="CBGL" />
-    <add key="CBGL" value="CBGL" />
+    <add key="first" value="ERP" />
+    <add key="ERP" value="ERP" />
     <add key="transport" value="transport" />
     <add key="WSJY" value="WSJY" />
     <add key="APP_WXPZY" value="APP_WXPZY" />
@@ -104,13 +100,6 @@
     </bindings>
     <client />
   </system.serviceModel>
-  <applicationSettings>
-    <Web.Properties.Settings>
-      <setting name="Web_tceport_TokenService" serializeAs="String">
-        <value>http://www.tceport.com.cn:8001/webservice/TokenService.asmx</value>
-      </setting>
-    </Web.Properties.Settings>
-  </applicationSettings>
     <system.webServer>
         <httpProtocol>
             <customHeaders>
