--- a/Web/Properties/Settings.settings
+++ b/Web/Properties/Settings.settings
@@ -1,9 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Web.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="Web_tceport_TokenService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://www.tceport.com.cn:8001/webservice/TokenService.asmx</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
