--- a/DCIS.TC.Tools/TCEPORT.TC.Tools.csproj
+++ b/DCIS.TC.Tools/TCEPORT.TC.Tools.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonHelper.cs" />
+    <Compile Include="MD5.cs" />
     <Compile Include="OperateTrustSite.cs" />
     <Compile Include="OracleUtil.cs" />
     <Compile Include="PageUtil.cs" />
