--- a/Web/Web.config
+++ b/Web/Web.config
@@ -36,34 +36,9 @@
     <add key="UIModuleLevel" value="2" />
     <add key="ConnectionType" value="MSSQL" />
     <add key="DefaultConnection" value="sqlStr" />
-    <add key="WSUrl" value="http://www.tceport.com.cn:8001/login.aspx?BackURL=" />
+    <add key="WSUrl" value="Login.aspx?BackURL=" />
     <add key="first" value="ERP" />
     <add key="ERP" value="ERP" />
-    <add key="transport" value="transport" />
-    <add key="WSJY" value="WSJY" />
-    <add key="APP_WXPZY" value="APP_WXPZY" />
-    <add key="TGSB" value="TGSB" />
-    <add key="APP_SGY" value="HDPT" />
-    <add key="JKYH" value="JKYH" />
-    <add key="APP_JZXTG" value="APP_JZXTG" />
-    <!--<add key="urlFCBGL" value="http://58.210.24.163:8080/tcgshipwb" />-->
-    <add key="urlFCBGL" value="http://192.168.118.77:9090/tcgshipwb" />
-    <add key="urlBCBGL" value="tokenAndrl" />
-    <!--<add key="urlFWSJY" value="http://58.210.24.163:9090/sanitationwb"/>-->
-    <add key="urlFWSJY" value="http://192.168.118.77:9090/sanitationwb" />
-    <add key="urlBWSJY" value="tokenAndrl" />
-    <add key="urlFAPP_WXPZY" value="http://58.210.24.165:8001" />
-    <add key="urlBAPP_WXPZY" value="tokennew" />
-    <add key="urlFTGSB" value="" />
-    <add key="urlBTGSB" value="" />
-    <add key="urlFHDPT" value="http://192.168.118.11:8902/" />
-    <add key="urlBHDPT" value="" />
-    <add key="urlFAPP_JZXTG" value="http://58.210.24.165" />
-    <add key="urlBAPP_JZXTG" value="tokennew" />
-    <add key="urlFJKYH" value="http://58.210.24.163:7070/TcgManager" />
-    <add key="urlBJKYH" value="" />
-    <add key="urlFTGSP" value="http://58.210.24.165" />
-    <add key="urlBTGSP" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
