--- a/Web/Web.config
+++ b/Web/Web.config
@@ -53,7 +53,8 @@
       <add name="WebApi" type="WebApi.Interceptor,WebApi" />
     </httpModules>
     <httpRuntime requestValidationMode="2.0" />
-    <sessionState mode="InProc" timeout="2" />
+    <!--<sessionState mode="InProc" timeout="2" />-->
+    <sessionState mode="StateServer"  timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
   </system.web>
   <!--IIS集成模式(webServer)-->
   <!--<system.webServer>
@@ -81,6 +82,11 @@
                 <add name="P3P" value="CAO PSA OUR" />
             </customHeaders>
         </httpProtocol>
-        <directoryBrowse enabled="true" />
+        <directoryBrowse enabled="false" />
+        <defaultDocument>
+            <files>
+                <add value="Login.aspx" />
+            </files>
+        </defaultDocument>
     </system.webServer>
 </configuration>
