--- a/Web/Web.config
+++ b/Web/Web.config
@@ -14,11 +14,7 @@
 			<section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v12.1, Version=12.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
 		</sectionGroup>-->
   </configSections>
-  <connectionStrings>
-    <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
-    <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
-    <add name="sqlStr" connectionString="server=.;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
   <common>
     <logging>
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
@@ -56,6 +52,11 @@
     <!--<sessionState mode="InProc" timeout="2" />-->
     <sessionState mode="StateServer"  timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
   </system.web>
+  <connectionStrings>
+    <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
+    <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
+    <add name="sqlStr" connectionString="server=192.168.118.4;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <!--IIS集成模式(webServer)-->
   <!--<system.webServer>
     <modules>
