--- a/Web/Web.config
+++ b/Web/Web.config
@@ -55,7 +55,7 @@
   <connectionStrings>
     <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
     <!--<add name="ora8" connectionString="User ID=tc;pwd=tc;Data Source=cuixx;Persist Security Info=False;" providerName="System.Data.OracleClient" />-->
-    <add name="sqlStr" connectionString="server=192.168.118.4;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
+    <add name="sqlStr" connectionString="server=.;database=CreateErp;user=sa;pwd=sa;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--IIS集成模式(webServer)-->
   <!--<system.webServer>
