--- a/Web/Web.config
+++ b/Web/Web.config
@@ -35,8 +35,14 @@
     <add key="WSUrl" value="Login.aspx?BackURL=" />
     <add key="first" value="ERP" />
     <add key="ERP" value="ERP" />
+    <!--文件存放地址-->
+    <add key="FilePath" value="/UploadFiles/"/>
   </appSettings>
   <system.web>
+    <!--设定字符集-->
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="zh-CN"/>
+    <!--上传控制，按需要修改，分别为大小、时间、连接数-->
+    <httpRuntime maxRequestLength="20480" executionTimeout="60" appRequestQueueLimit="100"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
