--- a/Web/Web.config
+++ b/Web/Web.config
@@ -54,7 +54,7 @@
    <httpModules>
       <add name="WebApi" type="WebApi.Interceptor,WebApi" />
     </httpModules>
-    <httpRuntime requestValidationMode="2.0" />
+    <!--<httpRuntime requestValidationMode="2.0" />-->
     <!--<sessionState mode="InProc" timeout="2" />-->
     <sessionState mode="StateServer"  timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
   </system.web>
