--- a/DCIS.TC.Business/TCEPORT.TC.Business.csproj
+++ b/DCIS.TC.Business/TCEPORT.TC.Business.csproj
@@ -57,7 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonFun.cs" />
+    <Compile Include="CommonFun.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CommonPay_BLL.cs" />
     <Compile Include="Common\SqlHelper.cs" />
     <Compile Include="Common\Users.cs" />
