--- a/Web/Web.config
+++ b/Web/Web.config
@@ -85,16 +85,16 @@
     <client />
   </system.serviceModel>
     <system.webServer>
-        <httpProtocol>
+        <!--<httpProtocol>
             <customHeaders>
                 <add name="P3P" value="CAO PSA OUR" />
             </customHeaders>
-        </httpProtocol>
-        <directoryBrowse enabled="false" />
+        </httpProtocol>-->
+        <!--<directoryBrowse enabled="false" />
         <defaultDocument>
             <files>
                 <add value="Login.aspx" />
             </files>
-        </defaultDocument>
+        </defaultDocument>-->
     </system.webServer>
 </configuration>
