--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -47,6 +47,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLL\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PageOffice, Version=2.0.0.1, Culture=neutral, PublicKeyToken=1d75ee5788809228, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Zhuozhengsoft\PageOffice\PageOffice.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
@@ -83,6 +87,7 @@
     <Content Include="app\erp\PurchaseContractApp.js" />
     <Content Include="app\erp\PurchasePay.js" />
     <Content Include="app\erp\PurchasePayApp.js" />
+    <Content Include="app\erp\PurchasePayList.js" />
     <Content Include="app\erp\PurchaseStorage.js" />
     <Content Include="app\erp\PurchaseSupplier.js" />
     <Content Include="app\erp\QueryCommonPay.js" />
@@ -111,6 +116,8 @@
     <Content Include="app\store\GoodsTypeStore.js" />
     <Content Include="app\store\SysDepartStore.js" />
     <Content Include="app\store\SysGoodsStore.js" />
+    <Content Include="app\store\ViewCustomerStore.js" />
+    <Content Include="app\store\ViewSupplierStore.js" />
     <Content Include="app\store\ViewUserStore.js" />
     <Content Include="app\store\SysAreaStore.js" />
     <Content Include="app\store\SysPositionStore.js" />
@@ -128,6 +135,8 @@
     <Content Include="app\tceport\dateTimeField.js" />
     <Content Include="app\tceport\dateTimePicker.js" />
     <Content Include="app\tceport\DropDownList.js" />
+    <Content Include="app\tceport\filesPanel.js" />
+    <Content Include="app\tceport\fileupload.js" />
     <Content Include="app\tceport\LinkColumn.js" />
     <Content Include="app\tceport\MsgWindow.js" />
     <Content Include="app\tceport\MyLinkCol.js" />
@@ -171,9 +180,12 @@
     <Content Include="app\user\User.js" />
     <Content Include="css\styles.css" />
     <Content Include="Default.aspx" />
+    <Content Include="downLoadFile.aspx" />
     <Content Include="Firstpage.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="ImageFiles\Thumbs.db" />
     <Content Include="img\background.jpg" />
+    <Content Include="img\create.png" />
     <Content Include="img\page_bg.gif" />
     <Content Include="img\sponsors\1%281%29.png" />
     <Content Include="img\sponsors\1.png" />
@@ -200,7 +212,6 @@
     <Content Include="img\sponsors\p011.jpg" />
     <Content Include="img\sponsors\p012.jpg" />
     <Content Include="img\sponsors\p013.jpg" />
-    <Content Include="img\title_login.png" />
     <Content Include="img\title_login1.png" />
     <Content Include="js\jquery-1.11.1.min.js" />
     <Content Include="js\jquery-1.8.3.js" />
@@ -213,6 +224,8 @@
     <Content Include="js\script_bak.js" />
     <Content Include="Login.aspx" />
     <Content Include="Logout.aspx" />
+    <Content Include="preview_office.aspx" />
+    <Content Include="preview_pdf.aspx" />
     <Content Include="resources\appThemes\first_page\lib\1.png" />
     <Content Include="resources\appThemes\first_page\lib\10.png" />
     <Content Include="resources\appThemes\first_page\lib\11.png" />
@@ -2671,9 +2684,6 @@
     <Content Include="resources\swfupload.swf" />
     <Content Include="resources\themes\appImage\bgALL.jpg" />
     <Content Include="resources\themes\appImage\header-bg.png" />
-    <Content Include="resources\themes\appImage\hwjg.png" />
-    <Content Include="resources\themes\appImage\hwsb.png" />
-    <Content Include="resources\themes\appImage\indexIcon.png" />
     <Content Include="resources\themes\appImage\indexImage\hdpt.png" />
     <Content Include="resources\themes\appImage\indexImage\hgc.png" />
     <Content Include="resources\themes\appImage\indexImage\jkyh.png" />
@@ -2687,19 +2697,10 @@
     <Content Include="resources\themes\appImage\indexImage\wsg.png" />
     <Content Include="resources\themes\appImage\indexImage\wsjy.png" />
     <Content Include="resources\themes\appImage\indexImage\wxp.png" />
-    <Content Include="resources\themes\appImage\infoQ.png" />
-    <Content Include="resources\themes\appImage\infoQuery.png" />
     <Content Include="resources\themes\appImage\loading.gif" />
-    <Content Include="resources\themes\appImage\logo.jpg" />
     <Content Include="resources\themes\appImage\logoNew.jpg" />
-    <Content Include="resources\themes\appImage\myxk.png" />
-    <Content Include="resources\themes\appImage\qyzz.png" />
     <Content Include="resources\themes\appImage\tbg1.png" />
     <Content Include="resources\themes\appImage\top_bg.jpg" />
-    <Content Include="resources\themes\appImage\wlpt.png" />
-    <Content Include="resources\themes\appImage\ysgj.png" />
-    <Content Include="resources\themes\appImage\zfjs.png" />
-    <Content Include="resources\themes\appImage\zmzq.png" />
     <Content Include="resources\themes\homepageicons\agent.png" />
     <Content Include="resources\themes\homepageicons\assignApprovePlace.png" />
     <Content Include="resources\themes\homepageicons\certifying.png" />
@@ -2751,6 +2752,8 @@
     <Content Include="resources\themes\icons\config.png" />
     <Content Include="resources\themes\icons\copy.gif" />
     <Content Include="resources\themes\icons\cut.png" />
+    <Content Include="resources\themes\icons\download.jpg" />
+    <Content Include="resources\themes\icons\download.png" />
     <Content Include="resources\themes\icons\edit_add.png" />
     <Content Include="resources\themes\icons\edit_remove.png" />
     <Content Include="resources\themes\icons\examine.png" />
@@ -2929,6 +2932,9 @@
     <Content Include="resources\ux\DataView\DragSelector.js" />
     <Content Include="resources\ux\DataView\LabelEditor.js" />
     <Content Include="app\ciq\getToken.ashx" />
+    <None Include="Properties\PublishProfiles\createapp.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -2941,6 +2947,13 @@
   <ItemGroup>
     <Compile Include="app\ciq\getToken.ashx.cs">
       <DependentUpon>getToken.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="downLoadFile.aspx.cs">
+      <DependentUpon>downLoadFile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="downLoadFile.aspx.designer.cs">
+      <DependentUpon>downLoadFile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -2956,41 +2969,56 @@
     <Compile Include="Logout.aspx.designer.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
+    <Compile Include="preview_office.aspx.cs">
+      <DependentUpon>preview_office.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="preview_office.aspx.designer.cs">
+      <DependentUpon>preview_office.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="preview_pdf.aspx.cs">
+      <DependentUpon>preview_pdf.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="preview_pdf.aspx.designer.cs">
+      <DependentUpon>preview_pdf.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="uploadfile.ashx.cs">
+      <DependentUpon>uploadfile.ashx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ImageFiles\Thumbs.db" />
     <Content Include="resources\appThemes\first_page\lib\OpenSans-Light.eot" />
     <Content Include="resources\appThemes\first_page\lib\OpenSans-Light.ttf" />
     <Content Include="resources\appThemes\first_page\lib\OpenSans-Light.woff" />
-    <Content Include="resources\appThemes\first_page\lib\Thumbs.db" />
     <Content Include="resources\appThemes\first_page\lib\vegur-l-webfont.eot" />
     <Content Include="resources\appThemes\first_page\lib\vegur-l-webfont.woff" />
-    <Content Include="resources\appThemes\first_page\thumbs\Thumbs.db" />
     <Content Include="resources\appThemes\login\images.zip" />
     <Content Include="resources\appThemes\main_page\images\headIcon.icon" />
-    <Content Include="resources\appThemes\main_page\images\Thumbs.db" />
-    <Content Include="resources\appThemes\north_page\images\Thumbs.db" />
-    <Content Include="resources\appThemes\south_page\images\Thumbs.db" />
     <Content Include="resources\ext-theme-access\Readme.md" />
-    <Content Include="resources\ext-theme-classic-sandbox\images\boundlist\Thumbs.db" />
-    <Content Include="resources\ext-theme-classic-sandbox\images\button\Thumbs.db" />
     <Content Include="resources\ext-theme-classic-sandbox\Readme.md" />
     <Content Include="resources\ext-theme-classic\Readme.md" />
     <Content Include="resources\ext-theme-gray\Readme.md" />
     <Content Include="resources\ext-theme-neptune\Readme.md" />
+    <Content Include="uploadfile.ashx" />
+    <Content Include="resources\appThemes\first_page\lib\Thumbs.db" />
+    <Content Include="resources\appThemes\first_page\thumbs\Thumbs.db" />
     <Content Include="resources\themes\appImage\Thumbs.db" />
+    <Content Include="resources\appThemes\main_page\images\Thumbs.db" />
+    <Content Include="resources\ext-theme-classic-sandbox\images\boundlist\Thumbs.db" />
+    <Content Include="resources\ext-theme-classic-sandbox\images\button\Thumbs.db" />
     <Content Include="resources\themes\homepageicons\Thumbs.db" />
     <Content Include="resources\themes\icons\Thumbs.db" />
-    <Content Include="resources\themes\images\gray\Thumbs.db" />
-    <Content Include="resources\themes\images\homepageicons\Thumbs.db" />
     <Content Include="resources\themes\images\Thumbs.db" />
+    <Content Include="resources\themes\images\homepageicons\Thumbs.db" />
     <Content Include="resources\themes\images\treeIcons\Thumbs.db" />
+    <Content Include="resources\themes\images\gray\Thumbs.db" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -2999,7 +3027,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="resources\themes\images\access\boundlist\" />
     <Folder Include="resources\themes\images\access\box\" />
     <Folder Include="resources\themes\images\access\button\" />
@@ -3069,6 +3096,7 @@
     <Folder Include="resources\themes\images\gray\sizer\" />
     <Folder Include="resources\themes\images\gray\toolbar\" />
     <Folder Include="resources\themes\treeIcon\" />
+    <Folder Include="UploadFiles\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DCIS.TC.Business\TCEPORT.TC.Business.csproj">
@@ -3096,6 +3124,24 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
@@ -3107,7 +3153,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>21710</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://192.168.118.4:8903</IISUrl>
+          <IISUrl>http://192.168.31.143:8903</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
