--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -81,13 +81,13 @@
     <Content Include="app\combo\SysAreaCombo.js" />
     <Content Include="app\combo\DepartCombo.js" />
     <Content Include="app\combo\PositionCombo.js" />
+    <Content Include="app\erp\BusinessPay.js" />
     <Content Include="app\erp\CommonPay.js" />
     <Content Include="app\erp\CommonPayApp.js" />
     <Content Include="app\erp\PurchaseContract.js" />
     <Content Include="app\erp\PurchaseContractApp.js" />
     <Content Include="app\erp\PurchasePay.js" />
     <Content Include="app\erp\PurchasePayApp.js" />
-    <Content Include="app\erp\PurchasePayList.js" />
     <Content Include="app\erp\PurchaseStorage.js" />
     <Content Include="app\erp\PurchaseSupplier.js" />
     <Content Include="app\erp\QueryCommonPay.js" />
@@ -106,6 +106,7 @@
     <Content Include="app\erp\SaleOutbound.js" />
     <Content Include="app\erp\SaleOutboundApp.js" />
     <Content Include="app\erp\SaleTracking.js" />
+    <Content Include="app\erp\UpholdData.js" />
     <Content Include="app\erp\UserManage.js" />
     <Content Include="app\erp\UserOwnInfo.js" />
     <Content Include="app\erp\UserPwdChange.js" />
@@ -3153,7 +3154,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>21710</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://192.168.31.143:8903</IISUrl>
+          <IISUrl>http://192.168.118.4:8903</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
