--- a/DCIS.TC.Business/TCEPORT.TC.Business.csproj
+++ b/DCIS.TC.Business/TCEPORT.TC.Business.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Common\SqlHelper.cs" />
     <Compile Include="Common\Users.cs" />
     <Compile Include="Menu.cs" />
+    <Compile Include="MssqlReportData.cs" />
     <Compile Include="PageUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -78,6 +79,7 @@
     <Compile Include="PurchasePay_BLL.cs" />
     <Compile Include="PurchaseStorage_BLL.cs" />
     <Compile Include="PurchaseSupplier_BLL.cs" />
+    <Compile Include="ReportData.cs" />
     <Compile Include="SaleContract_BLL.cs" />
     <Compile Include="SaleCustomer_BLL.cs" />
     <Compile Include="SaleOutbound_BLL.cs" />
