--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -187,6 +187,8 @@
     <Content Include="downLoadFile.aspx" />
     <Content Include="Firstpage.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="grinstall\grbsctl5.cab" />
+    <Content Include="grinstall\grbsctl5.exe" />
     <Content Include="ImageFiles\Thumbs.db" />
     <Content Include="img\background.jpg" />
     <Content Include="img\create.png" />
@@ -230,6 +232,7 @@
     <Content Include="Logout.aspx" />
     <Content Include="preview_office.aspx" />
     <Content Include="preview_pdf.aspx" />
+    <Content Include="print\printData\saleContractData.aspx" />
     <Content Include="resources\appThemes\first_page\lib\1.png" />
     <Content Include="resources\appThemes\first_page\lib\10.png" />
     <Content Include="resources\appThemes\first_page\lib\11.png" />
@@ -2987,6 +2990,13 @@
     <Compile Include="preview_pdf.aspx.designer.cs">
       <DependentUpon>preview_pdf.aspx</DependentUpon>
     </Compile>
+    <Compile Include="print\printData\saleContractData.aspx.cs">
+      <DependentUpon>saleContractData.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="print\printData\saleContractData.aspx.designer.cs">
+      <DependentUpon>saleContractData.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -3031,6 +3041,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="print\printTemplate\" />
     <Folder Include="resources\themes\images\access\boundlist\" />
     <Folder Include="resources\themes\images\access\box\" />
     <Folder Include="resources\themes\images\access\button\" />
@@ -3157,7 +3168,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>21710</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://192.168.31.143:8903</IISUrl>
+          <IISUrl>http://192.168.118.4:8903</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
