--- a/Web/Web.config
+++ b/Web/Web.config
@@ -36,19 +36,21 @@
     <add key="first" value="ERP" />
     <add key="ERP" value="ERP" />
     <!--文件存放地址-->
-    <add key="FilePath" value="/UploadFiles/"/>
+    <add key="FilePath" value="/UploadFiles/" />
   </appSettings>
   <system.web>
     <!--设定字符集-->
-    <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="zh-CN"/>
+    <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="zh-CN" />
     <!--上传控制，按需要修改，分别为大小、时间、连接数-->
-    <httpRuntime maxRequestLength="20480" executionTimeout="60" appRequestQueueLimit="100"/>
+    <httpRuntime maxRequestLength="20480" executionTimeout="60" appRequestQueueLimit="100" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="PageOffice, Version=2.0.0.1, Culture=neutral, PublicKeyToken=1D75EE5788809228"/>
+        <add assembly="Interop.poserverLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1D75EE5788809228"/>
       </assemblies>
     </compilation>
    <httpModules>
@@ -56,7 +58,7 @@
     </httpModules>
     <!--<httpRuntime requestValidationMode="2.0" />-->
     <!--<sessionState mode="InProc" timeout="2" />-->
-    <sessionState mode="StateServer"  timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
+    <sessionState mode="StateServer" timeout="20" stateConnectionString="tcpip=127.0.0.1:42424" stateNetworkTimeout="15" />
   </system.web>
   <connectionStrings>
     <!--<add name="ora8" connectionString="User ID=TCSYS;pwd=TCSYS;Data Source=TCSYS136;Persist Security Info=False;" providerName="System.Data.OracleClient"/>-->
@@ -85,6 +87,14 @@
     <client />
   </system.serviceModel>
     <system.webServer>
+        <directoryBrowse enabled="false" />
+        <security>
+            <requestFiltering>
+                <fileExtensions>
+                    <add fileExtension=".aspx" allowed="true" />
+                </fileExtensions>
+            </requestFiltering>
+        </security>
         <!--<httpProtocol>
             <customHeaders>
                 <add name="P3P" value="CAO PSA OUR" />
